Add profile + user rated movies
