# server/models/user.py
@@ -1,9 +1,13 @@
 from flask import Flask, jsonify, redirect, request, session, make_response, redirect
 from config import db
 from bson import json_util
+from src.utils import get_page_of_movies, get_nb_movies, get_nb_pages
+import pandas as pd
 import bcrypt
 import uuid
 import json
+import time
+import datetime
 
 class User:
 	def start_session(self, user):
@@ -47,7 +51,7 @@ class User:
 
 		return { "message": "Signup failed" }, 400
 	
-	def signout(self):
+	def logout(self):
 		session.clear()
 		return { "message": "Session cleared" }, 200
 	
@@ -68,7 +72,9 @@ class User:
 			return { "login": True, "user": session["user"] }, 200
 		return { "login": False }, 200
 
-	def get_rating(self, userId, movieId):
+	def get_rating(self, movieId):
+		userId = request.args.get("userId")
+
 		data = db.users.find_one(
 			{"_id": userId, "ratings.movieId": movieId},
 			{"_id": 0, "ratings.$": 1}
@@ -80,23 +86,72 @@ class User:
 		else:
 			return { "message": "Didn't find rating for this movie with this user"}, 204
 
-	def set_rating(self, userId):
+	def set_rating(self, movieId):
 		req = request.get_json(force=True)
-		print(req)
-		if (not (req.get("movieId") and req.get("score"))):
-			return { "message": "movieId or score is missing"}, 400
+		userId = request.args.get("userId")
+
+		if (not req.get("score")):
+			return { "message": "movieId or score is missing" }, 400
 		if(not db.users.find_one({"_id": userId})):
-			return { "message": "User not Found"}, 401
+			return { "message": "User not Found" }, 401
 		
-		if (db.users.find_one({"_id": userId, "ratings.movieId": req["movieId"]})):
+		if (db.users.find_one({"_id": userId, "ratings.movieId": movieId})):
 			db.users.update_one(
-				{ "_id": userId, "ratings.movieId": req["movieId"] },
-				{ "$set": {"ratings.$.rating": req["score"]} }
+				{ "_id": userId, "ratings.movieId": movieId },
+				{ "$set": {"ratings.$.rating": req["score"], "ratings.$.timestamp": datetime.datetime.now()} }
 			)
 		else:
 			db.users.update_one(
 				{ "_id": userId },
-				{ "$addToSet": {"ratings": {"movieId": req["movieId"], "rating": req["score"]}}
+				{ "$addToSet": {"ratings": {"movieId": movieId, "rating": req["score"], "timestamp": datetime.datetime.now()}}
 			})
 
 		return { "message": "Movie score updated" }, 200
+
+	def get_movies(self):
+		userId = request.args.get("userId")
+		page = int(request.args.get("page", 1))
+		# Values : rating.asc, rating.desc, last_rated
+		sort_by = request.args.get("sort_by", "last_rated")
+
+		# Get movie list
+		data = db.users.find_one({ "_id": userId })
+		result_movies = pd.DataFrame(list(data["ratings"]))
+
+		# Value to sort
+		sort_value = ""
+		if (sort_by.startswith("rating")):
+			sort_value = "rating"
+		elif (sort_by == "last_rated"):
+			sort_value = "timestamp"
+		
+		# Sort by descending, ascending or last rated
+		if (sort_by == "rating.asc"):
+			result_movies = result_movies.sort_values(sort_value, ascending=True)
+		else:
+			result_movies = result_movies.sort_values(sort_value, ascending=False)
+
+		# List of movie ids
+		idTopList = get_page_of_movies(result_movies, page)["movieId"].astype(int).tolist()
+
+		# Get all movies corresponding to the list of ids
+		data = db.movies.find({ "id": { "$in": idTopList } })
+		json_data = json.loads(json_util.dumps(data))
+
+		# Sort to correspond original id sort (mongodb shuffle the list)
+		json_data_sorted = []
+		for movieId in idTopList:
+			for doc in json_data:
+				if movieId == doc["id"]:
+					json_data_sorted.append(doc)
+					break;
+
+		if (data != None):
+			return {
+				"page": page,
+				"result": json_data_sorted,
+				"total_results": get_nb_movies(result_movies),
+				"total_pages": get_nb_pages(result_movies)
+			}, 200
+
+		return { "message": "Movie list not found" }, 404
